--- a/2018-08-16/mind-your-own-business-view-controller/slides.html
+++ b/2018-08-16/mind-your-own-business-view-controller/slides.html
@@ -297,7 +297,7 @@ class: middle
 
 ## **MVC** framework
 
-1. Realisation that last project was rest endpoints to update a database.
+1. Realisation that last project was REST endpoints to update a database.
 --
 
 2. Hope that the next one will be the same.
@@ -348,7 +348,7 @@ class: middle
 
 ## Isolate the **model**
 
-- use ports to obscure infrastructure details
+- Use ports to obscure infrastructure details
 - Start from lib
 - Delay descisions about which exciting NoSQL DB is best
 
