--- a/2018-08-26/errors-are-not-exceptional/index.html
+++ b/2018-08-26/errors-are-not-exceptional/index.html
@@ -19,16 +19,16 @@
     <h1>Errors are not exceptional</h1>
     <p>
       <b>
-        TL;DR bad input is exceptional.
+        TL;DR bad input is not exceptional.
       </b>
-        Only use exceptions for truely exceptional cases.
+        Only use exceptions for truly exceptional cases.
         Try <a href="https://github.com/CrowdHailer/OK">OK</a>.
     </p>
     <h2>Hello, my friend</h2>
     <p>
       Let us start with some simple functionality.
-      Given the id for a user, in this case an integer, return a greeting for that user.
-      The first iteration of a greet function could look something like this.
+      Given the ID for a user, in this case an integer, return a greeting for that user.
+      The first iteration of a greet function could look something like this:
     </p>
     <pre><code class="language-elixir">
       @spec greet(integer) :: String.t()
@@ -40,17 +40,16 @@
       end
     </code></pre>
     <p>
-      This version appears to do everything we need, given a user id we are returned a string.
+      This version appears to do everything we need; when we are given a user ID we are returned a string.
     </p>
     <p>
       The good thing about this function is what it does is very clear.
-      The less good is that it will crash if a user can't be found or if either part of their name is unset.
+      The downside is that it will crash if a user can't be found or if either part of their name is unset.
     </p>
     <h2>Full names</h2>
     <p>
-      Assuming the full name of a user is used in many places in this project.
-      The fact a name is stored as two parts, first and second, is just a detail
-      It would be useful to have a single funcation that returns a users full name.
+      Assuming the full name of a user is used in many places in this project, the fact a name is stored as two parts, first and second, is just a detail.
+      It would be useful to have a single function that returns a user's full name.
     </p>
     <p>
       In some cases if the full name is not available the programs need to do some follow up actions,
@@ -65,7 +64,7 @@
     </code></pre>
     <h2>Composing errors</h2>
     <p>
-      The <a href="">OK</a> library includes a <a href="https://hexdocs.pm/ok/OK.html#for/1">for</a> macro to compose functions that error.
+      The <a href="">OK</a> library includes the <a href="https://hexdocs.pm/ok/OK.html#for/1">for</a> macro, usef to compose functions that return errors.
       This can be used to compose the functions to fetch parts of a name that might error into one for fetching the full name.
     </p>
     <pre><code class="language-elixir">
@@ -82,20 +81,20 @@
       The <code class="language-elixir">&lt;-</code> in this example is the bind operator.
       If the function on the right returns a value wrapped in an <code class="language-elixir">:ok</code> tuple,
       then the value in that tuple is bound to the variable.
-      When an <code class="language-elixir">:error</code> tuple being is the right side of the bind,
-      then the for block stops processing and returns the error tuple.
+      When an <code class="language-elixir">:error</code> tuple is on the right side of the bind,
+      then the "for" block stops processing and returns the error tuple.
     </p>
     <p>
-      If every variable in the for block is bound sucessefully then the after block is exectuted
-      and the value there returned wrapped in an <code class="language-elixir">:ok</code> tuple.
+      If every variable in the "for" block is bound successfully then the "after" block is executed.
+      The value from the "after" block is returned wrapped in an <code class="language-elixir">:ok</code> tuple.
     </p>
     <p>
-      The for macro will only return values in a result tuple.
-      These functions can then be composed further in another for macro, or a try macro that we will see next.
+      The "for" macro will only return values in a result tuple.
+      These functions can then be composed further in another "for" macro, or a "try" macro that we will see next.
     </p>
     <h2>Fixing errors</h2>
     <p>
-      For our greeting example we need to return a string, or there will be a crash, this means handling the error cases.
+      For our greeting example we need to return a string, or there will be a crash.This means handling the error cases.
       The <a href="">OK</a> library includes a <a href="https://hexdocs.pm/ok/OK.html#try/1">try</a> macro for handling errors.
     </p>
     <pre><code class="language-elixir">
@@ -114,15 +113,15 @@
     </code></pre>
     <p>
       In this example the bind operator does the same thing as before.
-      However the return from the after block is not wrapped in an <code class="language-elixir">:ok</code> tuple.
+      However the return from the "after" block is not wrapped in an <code class="language-elixir">:ok</code> tuple.
     </p>
     <p>
-      There is also an additional recure block.
+      There is also an additional "rescue" block.
       This accepts a series of cases to handle the error cases from the main block.
       In this example we just treat all errors the same.
     </p>
     <p>
-      Because the after and rescue blocks always return a string the return value of the greet function is also a string.
+      Because the "after" and "rescue" blocks always return a string the return value of the greet function is also a string.
     </p>
     <h2>The unknown unknown</h2>
     <p>
@@ -138,8 +137,8 @@
       And programmer error, like this example, is always possible.
     </p>
     <p>
-      This is where the <em>"Let it crash"</em> philosophy is comes in.
-      When something truely exceptional occurs, that the program cannot recover from, then the process should crash.
+      This is where the <em>"Let it crash"</em> philosophy comes in.
+      When something truly exceptional occurs, that the program cannot recover from, then the process should crash.
       However if other processes are not reliant on the crashed process they should continue.
     </p>
     <h2>Elegant error handling 2.0</h2>
@@ -148,7 +147,7 @@
       It is simple to get started with because it builds on the existing conventions of erlang, and Elixr.
     </p>
     <p>
-      Version 2.0 was recently released it includes;
+      Version 2.0 was recently released. It includes:
       <ul>
         <li>improved typespecs that make working with dialyzer easier.</li>
         <li>simpler way to get started with pipes that handle errors.<br><code class="language-elixir">use OK.Pipe</code></li>
