--- a/2018-08-16/mind-your-own-business-view-controller/index.html
+++ b/2018-08-16/mind-your-own-business-view-controller/index.html
@@ -17,7 +17,7 @@
     </header>
     <main class="article">
       <h1>Mind your own business View Controller</h1>
-      <a href="">
+      <a href="https://www.youtube.com/watch?v=ukMFwZtY3m0&index=14&list=PLvL2NEhYV4Zu4zxnZXtCSOCvsUHtxTYIl">
         <img src="facepalms.jpg" alt="Row of emoji facepalms" style="max-width:100%;">
       </a>
       <p>
@@ -26,12 +26,12 @@
         In both cases Elixir is a great choice.
         This talk will be a guide for alternative architectures e.g Hexagonal/Onion/Clean.
       </p>
-      <!-- <p>
-        Talk given at <a href="https://codesync.global/conferences/code-beam-sto-2018/">Code Beam STO 2018</a>.
-      </p> -->
+      <p>
+        Talk given at <a href="https://codesync.global/conferences/code-elixir-2018/">Elixir London 2018</a>.
+      </p>
       <p>
         <a href="slides.html">Slides</a>
-        <!-- <a href="https://www.youtube.com/watch?v=nk3RpnsVKO8">Video</a> -->
+        <a href="https://www.youtube.com/watch?v=ukMFwZtY3m0&index=14&list=PLvL2NEhYV4Zu4zxnZXtCSOCvsUHtxTYIl">Video</a>
       </p>
     </main>
     <footer>
