Draft of gen browser comparison

--- a/2018-02-23/http-is-message-passing/index.html
+++ b/2018-02-23/http-is-message-passing/index.html
@@ -28,7 +28,7 @@
       HTTP describes communication between clients and servers via the web.
       Below is a quote from the <a href="https://tools.ietf.org/html/rfc7230#section-1">rfc7230</a> introduction.
     </p>
-    <blockquote cite="https://tools.ietf.org/html/rfc7230#section-1" style="background: #d3e8fb;margin: 0;padding: 20px 40px;">
+    <blockquote cite="https://tools.ietf.org/html/rfc7230#section-1">
       The Hypertext Transfer Protocol (HTTP) is a stateless application-
       level request/response protocol that uses extensible semantics and
       self-descriptive message payloads for flexible interaction with
